[package]
name = "reviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
dotenv = "0.15.0"
pdf-extract = "0.6.5"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] } 
serde_json = "1.0.96"
spinners = "4.1.0"
tokio = { version = "1.28.0", features = ["full"] }
